# life-manager

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  GRPC_README.md  Makefile  PRD.md  README.md  SPEC.md  alembic.ini  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-grpc.txt  requirements.txt  setup.py
.claude/: settings.local.json
.continue/docs/: dev-docs.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
api/: Dockerfile  Dockerfile.dev  __init__.py  __main__.py  base_service.py  config.py  crud.py  database.py  dependencies.py  grpc_interceptors.py  grpc_server.py  grpc_utils.py  main.py  run.py  schemas.py  schemas_main.py  security.py
api/models/: __init__.py  base.py  calendar.py  database.py  finance.py  household.py  user.py
api/routers/: __init__.py  auth.py  finance.py  households.py  users.py
api/schemas/: __init__.py  token.py  user.py
api/services/grpc/: __init__.py  base.py  user_service.py
app/: Dockerfile  README.md  index.html  package-lock.json  tailwind.config.cjs  tsconfig.json
app/src/: App.css  App.tsx  index.css
app/src/components/: Dashboard.tsx  LangGraphChat.tsx  Navbar.tsx  UserLogin.tsx  UserProfile.css  UserProfile.tsx  UserRegistration.css  UserRegistration.tsx
app/src/components/finance/: AnalyticsDashboard.tsx  BudgetOverview.tsx  BudgetSettings.tsx  ExpenseEntry.tsx  ExpenseList.css  ExpenseList.tsx  RecurringExpenses.css
app/src/components/household/: HouseholdCreate.css  HouseholdCreate.tsx  HouseholdMembers.css  HouseholdMembers.tsx  HouseholdSettings.css  HouseholdSettings.tsx
app/src/components/layout/: AgentPanel.tsx  AgentToggleButton.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
app/src/contexts/: AgentPanelContext.tsx  AuthContext.tsx
docker/api/: Dockerfile  Dockerfile.dev
frontend/: Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.jsx  index.css  main.tsx
frontend/src/components/: Dashboard.css  Dashboard.jsx  Navbar.css  Navbar.jsx  UserLogin.css  UserLogin.jsx  UserProfile.jsx  UserProfile.tsx  UserRegistration.jsx  UserRegistration.tsx
frontend/src/components/finance/: AnalyticsDashboard.css  AnalyticsDashboard.jsx  BudgetOverview.css  BudgetOverview.jsx  BudgetOverview.tsx  BudgetSettings.css  BudgetSettings.jsx  ExpenseEntry.css  ExpenseEntry.jsx  ExpenseList.jsx  ExpenseList.tsx  RecurringExpenses.jsx  RecurringExpenses.tsx
frontend/src/components/household/: HouseholdCreate.jsx  HouseholdCreate.tsx  HouseholdMembers.jsx  HouseholdSettings.jsx
frontend/src/components/layout/: Header.jsx  Header.tsx  Layout.jsx  Layout.tsx  Sidebar.jsx
migrations/: env.py
migrations/versions/: c216979b7c9d_initial_database_schema.py
poetry/: generate_grpc_code.py  init_db.py
poetry/grpc/: __init__.py
poetry/templates/: __init__.py.tmpl
protos/api/v1/: calendar.proto  finance.proto  household.proto  user.proto
public/: index.html
scripts/: __init__.py  generate_client.py  generate_grpc_code.py  generate_grpc_code.sh  init-db.sh  init_db.py  requirements-grpc.txt  run_server.sh
scripts/clean/: __init__.py
scripts/db/: __init__.py
scripts/docker/: __init__.py
scripts/format/: __init__.py
scripts/lint/: __init__.py
scripts/server/: __init__.py
scripts/templates/: README.md.tmpl  client.py.tmpl  exceptions.py.tmpl  models.py.tmpl  setup.py.tmpl
scripts/test/: __init__.py
tests/: conftest.py  test_database.py  test_healthcheck.py  test_routers.py
